--- a/front_end/helloapp/src/app/form.component.css
+++ b/front_end/helloapp/src/app/form.component.css
@@ -1,6 +1,6 @@
 
 form{
-    background-color: #363636;
+    background: rgba(28, 54, 85, .9);
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -12,7 +12,7 @@ form{
     box-shadow:  0px 10px 20px 0px rgba(0, 0, 0, 0.3);
 }
 h1 {
-    background-color: #292829;
+    background: rgba(28, 54, 85, .9);
     border-radius: 5px 5px 0px 0px;
     -moz-border-radius: 5px 5px 0px 0px;
     -webkit-border-radius: 5px 5px 0px 0px;
