--- a/front_end/helloapp/src/app/register.component.html
+++ b/front_end/helloapp/src/app/register.component.html
@@ -1,32 +1,38 @@
 <div class="form">
-    <form class="register-form" name="register-form" novalidate method="post">
+    <form class="register-form" name="register-form" novalidate method="post" (ngSubmit)="submit(admin)">
         <div class="main">
         <h1>Регистрация</h1>
         <div>
             <div class="form-group">
                 <label>Имя</label>
                 <input class="form-control" name="name" [(ngModel)]="admin.name" #name="ngModel" required />
-                <div [hidden]="name.valid || name.untouched" class="alert alert-danger">
+                <div [hidden]="name.valid || name.untouched" class="alert alert-danger" style="font-size: small">
                     Не указано имя
+                </div>
+                <div [hidden]="nameExist == false" class="alert alert-danger" style="font-size: small">
+                    Данное имя занято
                 </div>
             </div>
             <div class="form-group">
                 <label>Email</label>
                 <input class="form-control" name="eMail" [(ngModel)]="admin.eMail" #eMail="ngModel"
                        required pattern="[a-zA-Z_]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}" />
-                <div [hidden]="eMail.valid || eMail.untouched" class="alert alert-danger">
+                <div [hidden]="eMail.valid || eMail.untouched" class="alert alert-danger" style="font-size: small">
                     Некорректный email
+                </div>
+                <div [hidden]="emailExist == false" class="alert alert-danger" style="font-size: small">
+                    Пользователь с таким email уже существует
                 </div>
             </div>
             <div class="form-group">
                 <label>Пароль</label>
                 <input class="form-control" type="password" name="password"  [(ngModel)]="admin.password" #password="ngModel" name="password" required pattern="[0-9a-zA-Z!@#$%^*]{5,}"/>
-                <div [hidden]="password.valid || password.untouched" >
+                <div [hidden]="password.valid || password.untouched" class="alert alert-danger" style="font-size: small">
                     Пароль должен содержать не менее 5 символов
                 </div>
             </div>
             <div class="form-group">
-                <button [disabled]="name.invalid || eMail.invalid || password.invalid " (click)="submit(admin)" [routerLink]="['/monitoring']" routerLinkActive="active">Создать аккаунт</button>
+                <button [disabled]="name.invalid || eMail.invalid || password.invalid " routerLinkActive="active">Создать аккаунт</button>
                 <p class="message">Вернуться к обзору?<a routerLink="/monitoring" > Назад</a></p>
             </div>
         </div>
