--- a/front_end/helloapp/src/app/form.component.html
+++ b/front_end/helloapp/src/app/form.component.html
@@ -14,9 +14,7 @@
         </div>
         <div class="form-group">
             <button [disabled]="myForm.invalid" class="btn btn-default">
-                <nav>
-                    <a (click)="onSubmit(myForm)" routerLink="/monitoring">Войти</a>
-                </nav>
+                <nav>Войти</nav>
             </button>
         </div>
     </div>
