update monitoring  and guard

--- a/front_end/helloapp/src/app/form.component.html
+++ b/front_end/helloapp/src/app/form.component.html
@@ -2,7 +2,7 @@
     <div class="main">
         <h1>АВТОРИЗАЦИЯ</h1>
         <div [hidden]="incorrect == false" class="alert alert-danger" style="font-size: small">
-            Username or password is incorrect
+            Некорректное Имя пользователя или Пароль
         </div>
         <div class="form-group">
             <label>Имя</label>
