--- a/front_end/helloapp/src/app/register.component.html
+++ b/front_end/helloapp/src/app/register.component.html
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label>Email</label>
                 <input class="form-control" name="eMail" [(ngModel)]="admin.eMail" #eMail="ngModel"
-                       required pattern="[a-zA-Z_]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}" />
+                       required pattern="[a-zA-Z0-9_]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}" />
                 <div [hidden]="eMail.valid || eMail.untouched" class="alert alert-danger" style="font-size: small">
                     Некорректный email
                 </div>
