--- a/front_end/helloapp/src/app/showerror.component.html
+++ b/front_end/helloapp/src/app/showerror.component.html
@@ -2,10 +2,10 @@
 
     <div class="col-xs-3 col-md-3"  style=" background: rgba(28, 54, 85, .9); height:100%;margin-top: 30px">
         <ul class="list-group list-unstyled">
-            <a class="list-group-item active-button"style="background: #f7f8f9; margin-top: 10px; cursor: pointer"><li><span class="glyphicon glyphicon-dashboard" style="cursor: pointer;"></span><span style="cursor: pointer"> Обзор</span></li></a>
+            <a [routerLink]="['/monitoring']" class="list-group-item" style="margin-top: 10px; cursor: pointer"><li><span class="glyphicon glyphicon-dashboard" style="cursor: pointer;"></span><span style="cursor: pointer"> Обзор</span></li></a>
             <a [routerLink]="['/request']" class="list-group-item" style="cursor: pointer"><li><span class="glyphicon glyphicon-arrow-right" style="cursor: pointer"></span><span style="cursor: pointer"> Запрoсы</span></li></a>
             <a [routerLink]="['/response']" class="list-group-item" style="cursor: pointer"><li><span class="glyphicon glyphicon-arrow-left" style="cursor: pointer"></span><span style="cursor: pointer"> Ответы</span></li></a>
-            <a [routerLink]="['/showerror']" class="list-group-item" style="cursor: pointer"><li><span class="glyphicon glyphicon-alert" style="cursor: pointer"></span><span style="cursor: pointer"> Ошибки</span></li></a>
+            <a class="list-group-item"(click)="showErrors()" style="background: #f7f8f9;cursor: pointer"><li><span class="glyphicon glyphicon-alert" style="cursor: pointer"></span><span style="cursor: pointer"> Ошибки</span></li></a>
             <a [routerLink]="['/register']" class="list-group-item"style="margin-top: 20px; cursor: pointer"><li><span class="glyphicon glyphicon-user" style="cursor: pointer"></span><span style="cursor: pointer"> Регистрация</span></li></a>
             <a class="list-group-item"(click)="exitMonitoring()" style="cursor: pointer"><li><span class="glyphicon glyphicon-log-out"style="cursor: pointer"></span><span style="cursor: pointer"> Выход</span></li></a>
 
@@ -24,7 +24,6 @@
                                 <!-- <span class="sr-only">Меню с переключением</span>-->
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                <li><a (click)="showOverviewSecond()" style="cursor: pointer; text-align: center">Секунда</a></li>
                                 <li><a (click)="showOverviewMinute()" style="cursor: pointer; text-align: center">Минута</a></li>
                                 <li><a (click)="showOverviewHour()" style="cursor: pointer; text-align: center">Час</a></li>
                                 <li class="divider"></li>
@@ -39,8 +38,7 @@
         </div>
 
         <div class="row">
-
-            <div class="col-xs-12 col-md-12" *ngIf="chart" style="background: white; margin-left: 20px; margin-top: 20px">
+            <div class="col-xs-12 col-md-12" *ngIf="chart" style="background: white;margin-left: 20px; margin-top: 20px">
                 <ngx-loading [show]="loading" [config]="{ backdropBackgroundColour: 'rgba(0,0,0,0)', backdropBorderRadius: '10px',
                         primaryColour: 'rgb(161, 160, 160)', secondaryColour: 'rgb(161, 160, 160)', tertiaryColour: 'rgb(161, 160, 160)' }">
                 </ngx-loading>
@@ -49,8 +47,7 @@
         </div>
 
         <div class="row">
-
-            <div class="col-xs-12 col-md-12" *ngIf="chart" style="background: white; margin-left: 20px;margin-top: 20px">
+            <div class="col-xs-12 col-md-12" *ngIf="chart" style="background: white;margin-left: 20px;margin-top: 20px">
                 <ngx-loading [show]="loading" [config]="{ backdropBackgroundColour: 'rgba(0,0,0,0)', backdropBorderRadius: '10px',
                         primaryColour: 'rgb(161, 160, 160)', secondaryColour: 'rgb(161, 160, 160)', tertiaryColour: 'rgb(161, 160, 160)' }">
                 </ngx-loading>
