--- a/front_end/helloapp/src/app/monitoring.component.html
+++ b/front_end/helloapp/src/app/monitoring.component.html
@@ -25,10 +25,10 @@
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
                                 <li><a (click)="showOverviewSecond()" style="cursor: pointer; text-align: center">Секунда</a></li>
-                                <li><a (click)="showOverviewMinute()" style="cursor: pointer; text-align: center">Минута</a></li>
+                                <li><a (click)="chartClear(); ngOnInit()" style="cursor: pointer; text-align: center">Минута</a></li>
                                 <li><a (click)="showOverviewHour()" style="cursor: pointer; text-align: center">Час</a></li>
                                 <li class="divider"></li>
-                                <li><a (click)="ngOnInit()" style="cursor: pointer; text-align: center">День</a></li>
+                                <li><a (click)="showOverviewDay()" style="cursor: pointer; text-align: center">День</a></li>
                             </ul>
                         </li>
                     </ul>
