--- a/front_end/helloapp/src/app/response.component.html
+++ b/front_end/helloapp/src/app/response.component.html
@@ -24,10 +24,10 @@
                                 <!-- <span class="sr-only">Меню с переключением</span>-->
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                <li><a (click)="showOverviewMinute()" style="cursor: pointer; text-align: center">Минута</a></li>
+                                <li><a (click)="chartClear();ngOnInit()" style="cursor: pointer; text-align: center">Минута</a></li>
                                 <li><a (click)="showOverviewHour()" style="cursor: pointer; text-align: center">Час</a></li>
                                 <li class="divider"></li>
-                                <li><a (click)="ngOnInit()" style="cursor: pointer; text-align: center">День</a></li>
+                                <li><a (click)="showOverviewDay()" style="cursor: pointer; text-align: center">День</a></li>
                             </ul>
                         </li>
                     </ul>
