--- a/front_end/helloapp/src/app/showerror.component.html
+++ b/front_end/helloapp/src/app/showerror.component.html
@@ -5,7 +5,7 @@
             <a [routerLink]="['/monitoring']" class="list-group-item" style="margin-top: 10px; cursor: pointer"><li><span class="glyphicon glyphicon-dashboard" style="cursor: pointer;"></span><span style="cursor: pointer"> Обзор</span></li></a>
             <a [routerLink]="['/request']" class="list-group-item" style="cursor: pointer"><li><span class="glyphicon glyphicon-arrow-right" style="cursor: pointer"></span><span style="cursor: pointer"> Запрoсы</span></li></a>
             <a [routerLink]="['/response']" class="list-group-item" style="cursor: pointer"><li><span class="glyphicon glyphicon-arrow-left" style="cursor: pointer"></span><span style="cursor: pointer"> Ответы</span></li></a>
-            <a class="list-group-item"(click)="showErrors()" style="background: #f7f8f9;cursor: pointer"><li><span class="glyphicon glyphicon-alert" style="cursor: pointer"></span><span style="cursor: pointer"> Ошибки</span></li></a>
+            <a class="list-group-item" style="background: #f7f8f9;cursor: pointer"><li><span class="glyphicon glyphicon-alert" style="cursor: pointer"></span><span style="cursor: pointer"> Ошибки</span></li></a>
             <a [routerLink]="['/register']" class="list-group-item"style="margin-top: 20px; cursor: pointer"><li><span class="glyphicon glyphicon-user" style="cursor: pointer"></span><span style="cursor: pointer"> Регистрация</span></li></a>
             <a class="list-group-item"(click)="exitMonitoring()" style="cursor: pointer"><li><span class="glyphicon glyphicon-log-out"style="cursor: pointer"></span><span style="cursor: pointer"> Выход</span></li></a>
 
@@ -24,10 +24,10 @@
                                 <!-- <span class="sr-only">Меню с переключением</span>-->
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                <li><a (click)="showOverviewMinute()" style="cursor: pointer; text-align: center">Минута</a></li>
+                                <li><a (click)="chartClear();ngOnInit()" style="cursor: pointer; text-align: center">Минута</a></li>
                                 <li><a (click)="showOverviewHour()" style="cursor: pointer; text-align: center">Час</a></li>
                                 <li class="divider"></li>
-                                <li><a (click)="ngOnInit()" style="cursor: pointer; text-align: center">День</a></li>
+                                <li><a (click)="showOverviewDay()" style="cursor: pointer; text-align: center">День</a></li>
                             </ul>
                         </li>
                     </ul>
