--- a/front_end/helloapp/src/app/showerror.component.html
+++ b/front_end/helloapp/src/app/showerror.component.html
@@ -57,7 +57,7 @@
                                 <tbody>
                                 <tr *ngFor="let error of errors">
                                     <td>{{error.name}}</td>
-                                    <td>{{error.date}}</td>
+                                    <td>{{error.time}}</td>
                                     <td>{{error.url}}</td>
                                     <td>{{error.description}}</td>
                                 </tr>
