--- a/front_end/helloapp/src/app/dialog.component.css
+++ b/front_end/helloapp/src/app/dialog.component.css
@@ -18,24 +18,24 @@
     margin-left: auto;
     min-height: 200px;
     width: 90%;
-    max-width: 520px;
+/* max-width: 520px;*/
     background-color: #fff;
     padding: 12px;
     box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
 }
 
 @media (min-width: 768px) {
-    .dialog {
-        top: 40px;
-    }
+ .dialog {
+     top: 40px;
+ }
 }
 
 .dialog__close-btn {
-    border: 0;
-    background: none;
-    color: #2d2d2d;
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    font-size: 1.2em;
+ border: 0;
+ background: none;
+ color: #2d2d2d;
+ position: absolute;
+ top: 8px;
+ right: 8px;
+ font-size: 1.2em;
 }
