update dialog error log

--- a/front_end/helloapp/src/app/showerror.component.css
+++ b/front_end/helloapp/src/app/showerror.component.css
@@ -43,3 +43,9 @@
 #main_nav li:hover ul {
     display: block;
 }
+
+.span3 {
+    max-height: 450px !important;
+    overflow: scroll;
+    table-layout: fixed;
+}​
