--- a/front_end/helloapp/src/app/dialog.component.css
+++ b/front_end/helloapp/src/app/dialog.component.css
@@ -17,7 +17,8 @@
     margin-right: auto;
     margin-left: auto;
     min-height: 200px;
-    width: 90%;
+    max-width: 80%;
+    width: auto;
 /* max-width: 520px;*/
     background-color: #fff;
     padding: 12px;
