--- a/front_end/helloapp/src/app/showerror.component.html
+++ b/front_end/helloapp/src/app/showerror.component.html
@@ -41,6 +41,7 @@
 
                         <app-dialog [(visible)]="showDialog">
                             <h2>Лог ошибок</h2>
+                            <div class="span3">
                             <table class="table table-responsive table-hover table-condensed">
                                 <!--  <ngx-loading [show]="loading" [config]="{ backdropBackgroundColour: 'rgba(0,0,0,0)', backdropBorderRadius: '10px',
                         primaryColour: 'rgb(161, 160, 160)', secondaryColour: 'rgb(161, 160, 160)', tertiaryColour: 'rgb(161, 160, 160)' }">
@@ -63,6 +64,7 @@
                                 </tr>
                                 </tbody>
                             </table>
+                            </div>
                             <button (click)="showDialog = !showDialog" class="btn" routerLinkActive="active" style="margin-left: 30%; margin-top:8px " >Вернуться к обзору</button>
                         </app-dialog>
                       </div>
